posiGen_FullsendBox/src/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Department</relationshipLabel>
        <relationshipName>Department</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Shorthand Code for the Dept.</description>
        <inlineHelpText>Shorthand Code for the Dept.</inlineHelpText>
        <label>Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NumOfBusinessProcesses__c</fullName>
        <label># of Business Processes</label>
        <summaryForeignKey>Business_Process__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OBS__c</fullName>
        <formula>IF(ISBLANK(  Parent_Department__c   ),  Code__c ,
IF(ISBLANK( Parent_Department__r.Parent_Department__c),  Parent_Department__r.Code__c &amp; &quot;.&quot; &amp; Code__c , 
IF(ISBLANK( Parent_Department__r.Parent_Department__r.Parent_Department__c), 
Parent_Department__r.Parent_Department__r.Code__c &amp; &quot;.&quot; &amp; Parent_Department__r.Code__c &amp; &quot;.&quot; &amp; Code__c,
Parent_Department__r.Parent_Department__r.Parent_Department__r.Code__c &amp; &quot;.&quot; &amp; Parent_Department__r.Parent_Department__r.Code__c &amp; &quot;.&quot; &amp; Parent_Department__r.Code__c &amp; &quot;.&quot; &amp; Code__c
)))</formula>
        <label>OBS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Department</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Department__c.Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Sub Department</relationshipLabel>
        <relationshipName>Parent_Department</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Positions__c</fullName>
        <label># of Positions</label>
        <summaryForeignKey>Position__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Parent_Department__c</columns>
        <columns>NAME</columns>
        <columns>OBS__c</columns>
        <columns>NumOfBusinessProcesses__c</columns>
        <columns>of_Positions__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Departments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Department</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>